Добавлены препроцессорные файлы и шрифты

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,38 @@
-// Начните писать стили здесь
+@import "variable.less";
+@import "page-header.less";
+@import "main-nav.less";
+@import "social.less";
+@import "page-main.less";
+@import "review.less";
+@import "instruction.less";
+@import "about.less";
+@import "route.less";
+@import "companion.less";
+@import "voyager.less";
+@import "flag-list.less";
+@import "transport-list.less";
+@import "business.less";
+@import "tariff.less";
+@import "authorization.less";
+@import "adress.less";
+@import "page-footer.less";
+
+@import "about-you.less";
+@import "plans.less";
+@import "plan-card.less";
+@import "new-plan.less";
+@import "first-step.less";
+@import "second-step.less";
+@import "third-step.less";
+@import "form.less";
+
+@import "main.less";
+@import "filtration-travelers.less";
+@import "hobby.less";
+@import "music.less";
+@import "food.less";
+@import "filtration-transport.less";
+@import "level.less";
+@import "fellow-traveler.less";
+@import "wants-to-visit.less";
+@import "transport.less";
