Внесены правки по замечаниям от наставника

--- a/source/less/review.less
+++ b/source/less/review.less
@@ -2,12 +2,12 @@
   .paint(@basic_blue);
   color: @white;
 }
-&__content {}
-&__quote {
+.review__content {}
+.review__quote {
   .font(16px; 22px);
   .font-face-light;
 }
-&__author {
+.review__author {
   .font(16px; 22px);
   .font-face-bold;
 }
