--- a/source/less/business.less
+++ b/source/less/business.less
@@ -12,7 +12,7 @@
 .business__list {
   margin-top: 56px;
   margin-left: 49px;
-  margin-borrom: 46px;
+  margin-bottom: 46px;
 }
 .business__item {
   margin-bottom: 30px;
