--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,6 +1,6 @@
 @basic_blue: #161C35;
 @blue_light: #EDEFF6;
-@basic_blue_light: 1D2E5B;
+@basic_blue_light: #1D2E5B;
 @basic_yellow: #FFD74B;
 @special_yellow_dark: #FFBD30;
 @special_blue_light: #DFE3F0;
