Продолжаем вёрстку с препроцессором

--- a/source/less/about.less
+++ b/source/less/about.less
@@ -1,9 +1,13 @@
 .about {
-  border-radius: 0px 0px 10px 10px;
   background-image: url(.../img/about-mobile@1x.png);
+  padding-left: 50px;
+  margin: 0px auto 0px;
+  width: 320px;
 }
 .about__title {
     color: @special_orange;
+    .font(24px; 24px);
+    .font-face-bold;
   }
 .about__comment {
   color: @white;
