--- a/source/less/adress.less
+++ b/source/less/adress.less
@@ -1,19 +1,24 @@
 .adress {
-  .paint(@basic_yellow);
+  width: 320px;
+  margin: 0px auto 0px;
 }
 .adress__article {
   .font(16px; 22px);
   .font-face-bold;
-  margin: 33px 91px 32px 86px;
+  text-transform: uppercase;
+  margin: 0px auto 0px;
+  width: 270px;
+  padding-top: 30px;
+  color: @basic_blue_light;
+  padding-left: 86px;
 }
 .adress__link {
+  margin: 0px auto 0px;
   .font(18px; 18px);
   .font-face-bold;
   border-radius: 10px;
   border: 3px solid #192144;
   .paint(@basic_yellow);
-  color: ;
-  padding-top: 22px;
-  padding-left: 22px;
-  padding-bottom: 22px;
+  color: @basic_blue_light; 
+  text-decoration: none;
 }
