--- a/source/less/authorization.less
+++ b/source/less/authorization.less
@@ -1,13 +1,20 @@
+.authorization {
+  margin: 0px auto 0px;
+  width: 320px;
+}
+
 .authorization__title {
   .font(24px; 24px);
   .font-face-bold;
   color: @special_orange;
+  text-align: center;
 } 
 .authorization__description {
   .font(16px; 22px);
   .font-face-light;
   color: @white;
   margin-top: 19px;
+  text-align: center;
 } 
 .authorization__link {
   color: @basic_yellow;
@@ -22,15 +29,18 @@
 .authorization__button {} 
 .authorization__comment {} 
 .authorization__social {
-  color: @basic_yellow;
-  margin-left: 86px;
   .font(16px; 22px);
   .font-face-bold;
+  list-style: none;
 }
 .authorization__tel {
   margin-bottom: 23px;
+  text-decoration: none;
+  color: @basic_yellow;
 }
 .authorization__mail {
   text-transform: uppercase;
   margin-bottom: 44px;
+  text-decoration: none;
+  color: @basic_yellow;
 }
