--- a/source/less/business.less
+++ b/source/less/business.less
@@ -1,5 +1,6 @@
 .business {
-  .paint(@back_gray);
+  margin: 0px auto 0px;
+  width: 320px;
   padding-left: 25px;
   padding-right: 49px;
 }
@@ -8,6 +9,7 @@
   .font(24px; 24px);
   .font-face-bold;
   .size(107px; 72px);
+  padding-top: 53px;
 }
 .business__list {
   margin-top: 56px;
@@ -23,3 +25,4 @@
   .font(16px; 16px);
   .font-face-light;
 }
+.business__price {}
