--- a/source/less/companion.less
+++ b/source/less/companion.less
@@ -1,36 +1,47 @@
 .companion {
   background-image: url(.../img/);
   background-color: @basic_back;
+  width:320px;
+  margin: 0px auto 0px;
+  padding: 0px;
 }
 .companion__title {
   .font(24px; 24px);
   .font-face-bold;
   color: @special_orange;
-  margin-top: 68px;
-  margin-right: 131px;
-  margin-left: 51px;
+  padding-top: 68px;
+  padding-left: 49px;
 }
 .companion__article {
   .font(16px; 22px);
   .font-face-light;
   color: @white;
-  margin-left: 51px;
+  padding-left: 49px;
   margin-top: 19px;
 }
 .companion__comment {
+  color: @white;
   .font(16px; 22px);
   .font-face-bold;
   margin-top: 25px;
+  padding-left: 49px;
 }
 .companion__list {
-  margin-top: 54px;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin: 54px auto 0px;
+  list-style: none;
+  padding: 0px;
+
 }
 .companion__item {
   margin-bottom: 9px;
+  margin: 0px auto 0px;
 }
 .companion__button {
   .paint(@basic_yellow);
   color: @basic_blue_light;
+  text-decoration: none;
+  .font(18px; 18px);
+  .font-face-bold;
+  border-radius: 10px;
+  padding: 22px 133px 21px 23px;
 }
