--- a/source/less/filtration-transport.less
+++ b/source/less/filtration-transport.less
@@ -1,11 +1,15 @@
 .filtration-transport {
-  border-top: 1px solid @yellow;
-  padding-top: 12px;
+  border: none;
+  width: 68,75%;
 }
 .filtration-transport__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
+  color: @basic_blue_light;
+  padding-top: 12px;
+  width: 100%;
+  border-top: 1px solid  @yellow;
 }
 .filtration-transport__list {
   list-style: none;
