--- a/source/less/hobby.less
+++ b/source/less/hobby.less
@@ -1,11 +1,15 @@
 .hobby{
-  hight: 40px;
-  border-top: 1px solid  @yellow;
-  padding-top: 12px;
+  height: 40px;
   padding-bottom: 14px;
+  border: none;
+  width: 68,75%;
 }
 .hobby__title {
+  border-top: 1px solid  @yellow;
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
+  color: @basic_blue_light;
+  padding-top: 12px;
+  width: 100%;
 }
