--- a/source/less/level.less
+++ b/source/less/level.less
@@ -1,12 +1,16 @@
 .level {
-  border-top: 1px solid  @yellow;
-  padding-top: 12px;
+  border: none;
+  width: 68,75%;
 }
 .level__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
   margin-bottom: 16px;
+  color: @basic_blue_light;
+  padding-top: 12px;
+  width: 100%;
+  border-top: 1px solid  @yellow;
 }
 .level__filter {}
 .level__inputs {
