--- a/source/less/music.less
+++ b/source/less/music.less
@@ -1,17 +1,23 @@
 .music {
   border-top: 1px solid @yellow;
   hight: 149px;
-  padding-top: 12px;
+  border: none;
+  width: 68,75%;
   padding-bottom: 20px;
 }
 .music__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
+  border-top: 1px solid  @yellow;
+  color: @basic_blue_light;
+  padding-top: 12px;
+  width: 100%;
 }
 .music__choose {}
 .music__list {
   list-style: none;
+  padding: 0px;
 }
 .music__item {
   color: @black;
