--- a/source/less/plans.less
+++ b/source/less/plans.less
@@ -1,6 +1,7 @@
 .plans {
   .paint(@special_blue_light);
   border-radius:10px;
+  padding: 9%;
 }
 .plans__title {
   color: @basic_blue_light;
@@ -9,12 +10,13 @@
   margin-top: 28px;
 }
 .plans__list {
-  margin-top: 29px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 0px;
+  list-style: none;
+  padding: 0px;
 }
 .plans__item {
   border-radius: 10px;
   .paint(@white);
-  width: 84%;
+  margin: 0px auto 10px;
+  padding: 9%;
 }
