--- a/source/less/review.less
+++ b/source/less/review.less
@@ -1,6 +1,8 @@
 .review {
   .paint(@basic_blue);
   color: @white;
+  width: 320px;
+  margin: 0px auto 0px;
 }
 .review__content {}
 .review__quote {
