--- a/source/less/second-step.less
+++ b/source/less/second-step.less
@@ -1,11 +1,18 @@
 .second-step {
   .paint(@white);
   border-radius: 10px;
-  margin-top: 23px;
+  margin: 24px auto 0px;
+  width: 66%;
+  padding: 9%;
 }
-.second-step__country {}
+.second-step__country {
+  border: none;
+  padding: 0px;
+}
 .second-step__list {
   margin: 21px auto 3px;
+  list-style: none;
+  padding: 0px;
 }
 .second-step__item {}
 .second-step__input {}
