--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,16 @@
 @import "variable.less";
 @import "page-header.less";
 @import "main-nav.less";
+@import "site-list.less";
+@import "user-list.less";
+@import "contacts.less";
 @import "social.less";
 @import "page-main.less";
 @import "review.less";
 @import "instruction.less";
 @import "about.less";
 @import "route.less";
+@import "route-item.less";
 @import "companion.less";
 @import "voyager.less";
 @import "flag-list.less";
@@ -16,6 +20,7 @@
 @import "authorization.less";
 @import "adress.less";
 @import "page-footer.less";
+@import "footer-social.less";
 
 @import "about-you.less";
 @import "plans.less";
