--- a/source/less/third-step.less
+++ b/source/less/third-step.less
@@ -1,7 +1,9 @@
 .third-step {
   .paint(@white);
   border-radius: 10px;
-  margin-top: 24px;
+  margin: 24px auto 20px;
+  width: 66%;
+  padding: 9%;
 }
 .third-step__form {
   margin: 23px auto 0px;
