--- a/source/less/transport-list.less
+++ b/source/less/transport-list.less
@@ -4,7 +4,15 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  list-style:none;
+  margin: 0px auto 0px;
+  padding: 0px;
 }
 .transport-list__item {
-  .size(21px; 21px)
+  .size(21px; 21px);
+  &--plane {
+  }
+  &--auto {}
+  &--bike {}
+  &--on-foot {}
 }
