--- a/source/less/voyager.less
+++ b/source/less/voyager.less
@@ -3,10 +3,12 @@
   .paint(@white);
   .size(270px; 428px);
   position: relative;
+  margin-bottom: 9px;
 }
 .voyager__avatar {
   width: 270px;
   height: 270px;
+  border-radius: 10px 10px 0px 0px;
 }
 .voyager__level {
   position: absolute;
@@ -21,13 +23,18 @@
 }
 .voyager__name {
   color:@basic_blue_light;
+  .font-face-bold;
+  .font(21px; 21px);
+  text-align: center;
 }
 .voyager__tegs {
   .font(16px; 18px);
   .font-face-normal;
   color:@special_gray;
-  margin: 15px auto;
+  margin: 15px auto 0px;
+  text-align: center;
+
 }
 .voyager__transport {
-  margin: 0px auto;
+  padding: 0px auto 0px;
 }
