--- a/source/less/filtration-travelers.less
+++ b/source/less/filtration-travelers.less
@@ -1,7 +1,9 @@
 .filtration-travelers {
   .paint(@basic_yellow);
   border-radius: 20px;
-  width: 84.37%;
+  width: 84%;
+  margin: 0px auto 0px;
+  padding: 9%;
 }
 .filtration-travelers__title {
   color: @basic_blue_light;
