--- a/source/less/food.less
+++ b/source/less/food.less
@@ -1,10 +1,14 @@
 .food {
-  border-top: 1px solid  @yellow;
-  padding-top: 12px;
+  border: none;
+  width: 68,75%;
   padding-bottom: 14px;
 }
 .food__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
+  border-top: 1px solid  @yellow;
+  color: @basic_blue_light;
+  padding-top: 12px;
+  width: 100%;
 }
