--- a/source/less/form.less
+++ b/source/less/form.less
@@ -1,5 +1,8 @@
 .form {}
-.form__list {}
+.form__list {
+  list-style: none;
+  padding: 0px;
+}
 .form__item {}
 .form__title {
   color: @basic_blue_light;
