--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,4 +1,8 @@
 .main-nav {
-	.font(30px; 35px);
-	.font-face-medium;
+  .font(30px; 35px);
+  .font-face-medium;
+  outline-offset: -5px;
+}
+.main-nav__toggle{
+  position:absolute;
 }
