--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,5 +1,5 @@
 .page-footer {
-  height: 239px;
+  border-radius: 20px 20px 0px 0px;
   .paint(@white);
 }
 .page-footer__logo {
@@ -7,6 +7,7 @@
 }
 .page-footer__social {
   margin: 40,34px auto 0px;
+  padding: 0px;
 }
 .page-footer__list {
   display: flex;
@@ -21,4 +22,6 @@
   color:@special_gray;
   .font(16px; 16px);
   .font-face-normal;
+  display: flex;
+  justify-content: space-between;
 }
