--- a/source/less/plan-card.less
+++ b/source/less/plan-card.less
@@ -13,6 +13,7 @@
 }
 .plan-card__button {
   text-transform: uppercase;
+  text-decoration: none;
   .font(14px; 14px);
   .font-face-medium;
   color: @black;
