--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -21,8 +21,7 @@
 
 .font-face-light {
   font-family: "Blogger sans";
-  src: url("../fonts/bloggersans-light.woff2") format("woff2"),
-     url("../fonts/bloggersans-light.woff") format("woff");
+  src: url("../fonts/bloggersans-light.woff2") format("woff2"),url("../fonts/bloggersans-light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -30,8 +29,7 @@
 
 .font-face-bold {
   font-family: "Blogger sans";
-  src: url("../fonts/bloggersans-bold.woff2") format("woff2"),
-     url("../fonts/bloggersans-bold.woff") format("woff");
+  src: url("../fonts/bloggersans-bold.woff2") format("woff2"),url("../fonts/bloggersans-bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -67,4 +65,19 @@
 .size(@width; @height) {
 	width: @width;
 	height: @height;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
