--- a/source/less/wants-to-visit.less
+++ b/source/less/wants-to-visit.less
@@ -1,11 +1,18 @@
 .wants-to-visit {
   list-style: none;
+  padding: 0px;
 }
 .wants-to-visit__item {
   color: @basic_blue_light;
   text-transform: uppercase;
   .font(15px; 16px);
   .font-face-medium;
+  display: flex;
+  margin: 0px;
 }
-.wants-to-visit__flag {}
-.wants-to-visit__country {}
+.wants-to-visit__flag {
+
+}
+.wants-to-visit__country {
+  margin: 5px;
+}
