--- a/source/less/business.less
+++ b/source/less/business.less
@@ -4,25 +4,30 @@
   padding-left: 25px;
   padding-right: 49px;
 }
+
 .business__title {
-  color:@special_orange;
+  color:@special-orange;
   .font(24px; 24px);
   .font-face-bold;
   .size(107px; 72px);
   padding-top: 53px;
 }
+
 .business__list {
   margin-top: 56px;
   margin-left: 49px;
   margin-bottom: 46px;
 }
+
 .business__item {
   margin-bottom: 30px;
 }
+
 .business__description,
 .business__price {
-  color:@special_gray;
+  color:@special-gray;
   .font(16px; 16px);
   .font-face-light;
 }
+
 .business__price {}
