--- a/source/less/fellow-traveler.less
+++ b/source/less/fellow-traveler.less
@@ -18,7 +18,7 @@
 }
 
 .fellow-traveler__name {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(20px; 20px);
   .font-face-bold;
   margin-top: 3,57%;
@@ -34,7 +34,7 @@
 }
 
 .fellow-traveler__tag {
-  color: @special_gray;
+  color: @special-gray;
 }
 
 .fellow-traveler__want {
@@ -42,7 +42,7 @@
 }
 
 .fellow-traveler__title {
-  color: @special_gray;
+  color: @special-gray;
   margin: 0px;
 }
 
@@ -54,9 +54,7 @@
   margin-bottom: 20px;
 }
 
-.fellow-traveler__transport {
-  
-}
+.fellow-traveler__transport {}
 
 .fellow-traveler__level {}
 
@@ -64,8 +62,8 @@
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
-  color: @basic_blue;
-  .paint(@basic_yellow);
+  color: @basic-blue;
+  .paint(@basic-yellow);
   width: 84%;
   padding: 14px;
   border-radius: 15px;
@@ -75,7 +73,7 @@
 }
 
 .fellow-traveler__show {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   text-decoration: none;
   text-align: center;
   width: 100%;
