--- a/source/less/filtration-travelers.less
+++ b/source/less/filtration-travelers.less
@@ -1,12 +1,13 @@
 .filtration-travelers {
-  .paint(@basic_yellow);
+  .paint(@basic-yellow);
   border-radius: 20px;
   width: 84%;
   margin: 0px auto 0px;
   padding: 9%;
 }
+
 .filtration-travelers__title {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(22px; 22px);
   .font-face-bold;
 }
