--- a/source/less/first-step.less
+++ b/source/less/first-step.less
@@ -5,31 +5,36 @@
   width: 66%;
   padding: 9%;
 }
+
 .first-step__filters {
   margin: 20px auto 0px;
 }
+
 .first-step__fellow-travelers {
   border: none;
   text-transform: uppercase;
   letter-spacing: 0.09em;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font-face-normal;
   .font(16px; 16px);
 }
+
 .first-step__long {
   border: none;
   text-transform: uppercase;
   letter-spacing: 0.09em;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font-face-normal;
   .font(16px; 16px);
 }
+
 .first-step__child {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(15px; 15px);
   .font-face-normal;
   border: none;
 }
+
 .first-step__dates {
   border: none;
 }
@@ -49,7 +54,7 @@
 .first-step__button {
   border: none;
   background: none;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(20px; 15px);
   .font-face-normal;
   opacity: 0.3;
