--- a/source/less/form.less
+++ b/source/less/form.less
@@ -1,18 +1,23 @@
 .form {}
+
 .form__list {
   list-style: none;
   padding: 0px;
 }
+
 .form__item {}
+
 .form__title {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(18px; 18px);
   .font-face-medium;
 }
+
 .form__flag {}
+
 .form__textarea {
   width: 220px;
   height: 220px;
   border-radius: 10px;
-  border: 1pz solid @special_gray; 
+  border: 1pz solid @special-gray; 
 }
