--- a/source/less/hobby.less
+++ b/source/less/hobby.less
@@ -4,12 +4,13 @@
   border: none;
   width: 68,75%;
 }
+
 .hobby__title {
   border-top: 1px solid  @yellow;
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-top: 12px;
   width: 100%;
 }
