--- a/source/less/level.less
+++ b/source/less/level.less
@@ -2,30 +2,37 @@
   border: none;
   width: 68,75%;
 }
+
 .level__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
   margin-bottom: 16px;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-top: 12px;
   width: 100%;
   border-top: 1px solid  @yellow;
 }
+
 .level__filter {}
+
 .level__inputs {
   hight: ;
   .paint(@white);
   border-radius: 10px;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(14px; 13px);
   .font-face-medium;
   display: grid;
   gap: 40%;
 }
+
 .level__controls {}
+
 .level__scale {}
+
 .level__bar {}
+
 .level__toggle {
   &--min {}
   &--max {}
