--- a/source/less/music.less
+++ b/source/less/music.less
@@ -5,25 +5,30 @@
   width: 68,75%;
   padding-bottom: 20px;
 }
+
 .music__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
   border-top: 1px solid  @yellow;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-top: 12px;
   width: 100%;
 }
+
 .music__choose {}
+
 .music__list {
   list-style: none;
   padding: 0px;
 }
+
 .music__item {
   color: @black;
   .font(15px; 20px);
   .font-face-normal;
 }
+
 .music__input {
   .paint(@white);
   border-radius: 4px;
