--- a/source/less/new-plan.less
+++ b/source/less/new-plan.less
@@ -1,33 +1,38 @@
 .new-plan {
-  .paint(@light_back);
+  .paint(@light-back);
   border-radius:10px;
   padding: 9%;
 }
+
 .new-plan__title {
   margin-top: 30px;
   margin-left: 7,8%;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(24px; 24px);
   .font-face-bold;
 }
+
 .new-plan__togles {
   display: inline-flex;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
 }
+
 .new-plan__step {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(20px; 20px);
   .font-face-bold;
 }
+
 .new-plan__description {
   .font(16px; 22px);
   .font-face-normal;
-  color:@special_gray;
+  color:@special-gray;
   width: 68%;
 }
+
 .new-plan__button-next {
-  .paint(@basic_yellow);
-  color: @basic_blue_light;
+  .paint(@basic-yellow);
+  color: @basic-blue-light;
   width: 100%;
   margin: 22px auto 0px;
   border: none;
@@ -36,8 +41,9 @@
   .font(17px; 30px);
   .font-face-bold;
 }
+
 .new-plan__button-back {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   margin: 0px auto;
   width: 100%;
   text-transform: uppercase;
