--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -5,24 +5,55 @@
   .paint(@white);
 }
 
-.page-header__logo{ 
+.page-header__logo { 
   back-ground-color: @white;
+  outline: 5px solid rgba(0, 255, 0, 0.8);
   outline-offset: -5px;
 }
 
-.page-header__contacts{
+.page-header__contacts {
   margin-top: 66px;
   margin-bottom: 53px;
   margin-left: 86px;
 }
 
-.page-header__social{
+.page-header__social {
   margin-right: 105px;
   margin-bottom: 41px;
   margin-left: 110px;
 }
 
-.page-header__contacts{
-  color: @basic_back;
+.page-header__contacts {
+  color: @basic-back;
   margin: 0px;
+}
+
+@media (min-width: @tablet-width) {
+  
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    .paint(@basic-blue);
+    display: inline-flex;
+    display: block;
+    width: 91%;
+    padding-top: 0px;
+    margin: 0px auto 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .page-header__social {
+    display: none;
+    position: absolute;
+  }
+
+  .page-header__contacts {
+    display: none;
+  }
+
+  .page-header__logo {
+    background-image: url(.../img/logo-desktop-white@1x.png);
+  }
 }
