--- a/source/less/plan-card.less
+++ b/source/less/plan-card.less
@@ -1,16 +1,19 @@
 .plan-card {}
+
 .plan-card__country {
   .font(16px; 16px);
   .font-face-bold;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
 }
+
 .plan-card__travelers {
   text-transform: uppercase;
   .font(14px; 14px);
   .font-face-medium;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   margin: 0px auto 10px;
 }
+
 .plan-card__button {
   text-transform: uppercase;
   text-decoration: none;
