--- a/source/less/plans.less
+++ b/source/less/plans.less
@@ -1,19 +1,22 @@
 .plans {
-  .paint(@special_blue_light);
+  .paint(@special-blue-light);
   border-radius:10px;
   padding: 9%;
 }
+
 .plans__title {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(24px; 24px);
   .font-face-bold;
   margin-top: 28px;
 }
+
 .plans__list {
   margin-top: 0px;
   list-style: none;
   padding: 0px;
 }
+
 .plans__item {
   border-radius: 10px;
   .paint(@white);
