--- a/source/less/route.less
+++ b/source/less/route.less
@@ -1,38 +1,42 @@
 .route {
-  .paint(@blue_light);
+  .paint(@blue-light);
   width: 320px;
   height: auto;
   margin: 0px auto 0px;
   padding-top: 71px;
 }
+
 .route__title {
   .font(24px; 24px);
   .font-face-bold;
-  color: @special_orange;
+  color: @special-orange;
   margin: 0px auto 0px;
   padding-left: 50px;
 }
+
 .route__article {
   .font(16px; 22px);
   .font-face-light;
-  color:@special_gray;
+  color:@special-gray;
   margin: 0px auto 0px;
   padding-left: 50px;
   padding-bottom: 50px;
 }
+
 .route__list {
   list-style: none;
   padding: 0px;
-  
 }
+
 .route__item {
   margin-bottom: 9px;
   .paint(@white);
   padding: 0px;
 }
+
 .route__button {
-  .paint(@basic_yellow);
-  color: @basic_blue_light;
+  .paint(@basic-yellow);
+  color: @basic-blue-light;
   .font(18px; 18px);
   .font-face-bold;
   text-decoration: none;
