--- a/source/less/tariff.less
+++ b/source/less/tariff.less
@@ -5,37 +5,44 @@
   margin: 0px auto 0px;
   border-radius: 10px;
 }
+
 .tariff__title {
-  color: @special_orange;
+  color: @special-orange;
   .font(24px; 24px);
   .font-face-bold;
   margin: 0px auto 0px;
   padding-top: 34px;
   text-align: center;
 }
+
 .tariff__list {
   margin: 39px auto 34px;
   width: 219px;
   height: 264px;
   border-top: 1px solid lighten(@black, 50%);
 }
+
 .tariff__item {
   border-bottom: 1px solid lighten(@black, 50%);
   .font(16px; 22px);
   .font-face-light;
 }
+
 .tariff__description {}
+
 .tariff__price {}
+
 .tariff__toggle {
   &--open {
-    color: @pure_blue;
+    color: @pure-blue;
     .font(16px; 16px);
     .font-face-bold;
     border: none;
   }
+  
   &--close {
-    .paint(@gray_blue);
-    color: @basic_blue_light;
+    .paint(@gray-blue);
+    color: @basic-blue-light;
     .font(16px; 24px);
     .font-face-bold;
     text-transform: uppercase;
