--- a/source/less/voyager.less
+++ b/source/less/voyager.less
@@ -5,36 +5,41 @@
   position: relative;
   margin-bottom: 9px;
 }
+
 .voyager__avatar {
   width: 270px;
   height: 270px;
   border-radius: 10px 10px 0px 0px;
 }
+
 .voyager__level {
   position: absolute;
   left: 17px;
   top: 17px;
   border-radius: 50%;
 }
+
 .voyager__flag {
   position: absolute;
   left: 62px;
   top: 259px;
 }
+
 .voyager__name {
-  color:@basic_blue_light;
+  color:@basic-blue-light;
   .font-face-bold;
   .font(21px; 21px);
   text-align: center;
 }
+
 .voyager__tegs {
   .font(16px; 18px);
   .font-face-normal;
-  color:@special_gray;
+  color:@special-gray;
   margin: 15px auto 0px;
   text-align: center;
-
 }
+
 .voyager__transport {
   padding: 0px auto 0px;
 }
