--- a/source/less/about-you.less
+++ b/source/less/about-you.less
@@ -1,6 +1,7 @@
 .about-you {
-  .paint(@gray_blue_light);
+  .paint(@gray-blue-light);
 }
+
 .about-you__level {
   margin-top: 20px;
 }
@@ -14,8 +15,8 @@
   .font(20px; 18px);
   .font-face-bold;
   text-transform: uppercase;
-  color: @basic_blue;
-  .paint(@special_blue_light);
+  color: @basic-blue;
+  .paint(@special-blue-light);
   width: 84,37%;
   height: 40px;
   margin-top: 18px;
@@ -24,7 +25,7 @@
 }
 
 .about-you__title {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
@@ -32,12 +33,12 @@
 }
 
 .about-you__tags {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(16px; 18px);
   .font-face-bold;
   opacity: 0.6;
   height: 89px;
-  border: 2px solid @gray_blue_light;
+  border: 2px solid @gray-blue-light;
   border-radius: 10px;
   width: 270px;
   margin: 0px auto 0px;
@@ -45,12 +46,12 @@
 
 .about-you__transport {
   height: 63px;
-  border: 2px solid @gray_blue_light;
+  border: 2px solid @gray-blue-light;
   border-radius: 10px;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   .font(16px; 18px);
   .font-face-bold;
   text-align: center;
   text-transform: uppercase;
-  border: 2px solid @gray_blue_light;
+  border: 2px solid @gray-blue-light;
 }
