--- a/source/less/about.less
+++ b/source/less/about.less
@@ -2,20 +2,65 @@
   background-image: url(.../img/about-mobile@1x.png);
   padding-left: 50px;
   margin: 0px auto 0px;
-  width: 320px;
+  width: 100%;
+  outline: 5px solid rgba(0, 255, 0, 0.8);
+  outline-offset: -5px;
 }
+
 .about__title {
-    color: @special_orange;
+    color: @special-orange;
     .font(24px; 24px);
     .font-face-bold;
-  }
+}
+
+.about__article {
+  color: @white;
+  .font(16px; 22px);
+  .font-face-light;
+}
+
 .about__comment {
   color: @white;
   .font(16px; 22px);
   .font-face-bold;
 }
-.about__article {
-  color: @white;
-  .font(16px; 22px);
-  .font-face-light;
+
+.about__link {
+  display: none;
+  background-color: @basic-yellow;
+  border-radius: 20px;
+  text-decoration: none;
+  color: @basic-blue-light;
+}
+
+@media (min-width: @desktop-width) {
+  .about {
+    height: 660px;
+    border-radius: 0px 0px 20px 20px;
+  }
+
+  .about__title {
+    .font(45px; 45px);
+    padding-top: 42px;
+  }
+
+  .about__article {
+    .font(28px; 34px);
+    width: 619px;
+    padding-top: 47px;
+  }
+
+  .about__comment {
+    .font(21px; 24px);
+    width: 425px;
+    padding-top: 28px;
+    display: block;
+  }
+
+  .about__link {
+    display: block;
+    .size(242px; 51px);
+    padding-left: 32px;
+    padding-top: 29px;
+  }
 }
