--- a/source/less/address.less
+++ b/source/less/address.less
@@ -1,24 +1,26 @@
-.adress {
+.address {
   width: 320px;
   margin: 0px auto 0px;
 }
-.adress__article {
+
+.address__article {
   .font(16px; 22px);
   .font-face-bold;
   text-transform: uppercase;
   margin: 0px auto 0px;
   width: 270px;
   padding-top: 30px;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-left: 86px;
 }
-.adress__link {
+
+.address__link {
   margin: 0px auto 0px;
   .font(18px; 18px);
   .font-face-bold;
   border-radius: 10px;
   border: 3px solid #192144;
-  .paint(@basic_yellow);
-  color: @basic_blue_light; 
+  .paint(@basic-yellow);
+  color: @basic-blue-light; 
   text-decoration: none;
 }
