--- a/source/less/authorization.less
+++ b/source/less/authorization.less
@@ -6,41 +6,49 @@
 .authorization__title {
   .font(24px; 24px);
   .font-face-bold;
-  color: @special_orange;
+  color: @special-orange;
   text-align: center;
-} 
+}
+
 .authorization__description {
   .font(16px; 22px);
   .font-face-light;
   color: @white;
   margin-top: 19px;
   text-align: center;
-} 
+}
+
 .authorization__link {
-  color: @basic_yellow;
+  color: @basic-yellow;
   .font(16px; 22px);
   .font-face-light;
-} 
+}
+
 .authorization__input {
   .paint(@white);
   border-radius: 10px;
-  color: @special_gray;
-} 
-.authorization__button {} 
-.authorization__comment {} 
+  color: @special-gray;
+}
+
+.authorization__button {}
+
+.authorization__comment {}
+
 .authorization__social {
   .font(16px; 22px);
   .font-face-bold;
   list-style: none;
 }
+
 .authorization__tel {
   margin-bottom: 23px;
   text-decoration: none;
-  color: @basic_yellow;
+  color: @basic-yellow;
 }
+
 .authorization__mail {
   text-transform: uppercase;
   margin-bottom: 44px;
   text-decoration: none;
-  color: @basic_yellow;
+  color: @basic-yellow;
 }
