--- a/source/less/companion.less
+++ b/source/less/companion.less
@@ -1,17 +1,19 @@
 .companion {
   background-image: url(.../img/);
-  background-color: @basic_back;
+  background-color: @basic-back;
   width:320px;
   margin: 0px auto 0px;
   padding: 0px;
 }
+
 .companion__title {
   .font(24px; 24px);
   .font-face-bold;
-  color: @special_orange;
+  color: @special-orange;
   padding-top: 68px;
   padding-left: 49px;
 }
+
 .companion__article {
   .font(16px; 22px);
   .font-face-light;
@@ -19,6 +21,7 @@
   padding-left: 49px;
   margin-top: 19px;
 }
+
 .companion__comment {
   color: @white;
   .font(16px; 22px);
@@ -26,19 +29,22 @@
   margin-top: 25px;
   padding-left: 49px;
 }
+
 .companion__list {
   margin: 54px auto 0px;
   list-style: none;
   padding: 0px;
 
 }
+
 .companion__item {
   margin-bottom: 9px;
   margin: 0px auto 0px;
 }
+
 .companion__button {
-  .paint(@basic_yellow);
-  color: @basic_blue_light;
+  .paint(@basic-yellow);
+  color: @basic-blue-light;
   text-decoration: none;
   .font(18px; 18px);
   .font-face-bold;
