--- a/source/less/filtration-transport.less
+++ b/source/less/filtration-transport.less
@@ -2,17 +2,20 @@
   border: none;
   width: 68,75%;
 }
+
 .filtration-transport__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-top: 12px;
   width: 100%;
   border-top: 1px solid  @yellow;
 }
+
 .filtration-transport__list {
   list-style: none;
   display: flex;
 }
+
 .filtration-transport__item {}
