--- a/source/less/food.less
+++ b/source/less/food.less
@@ -3,12 +3,13 @@
   width: 68,75%;
   padding-bottom: 14px;
 }
+
 .food__title {
   text-transform: uppercase;
   .font(16px; 18px);
   .font-face-bold;
   border-top: 1px solid  @yellow;
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   padding-top: 12px;
   width: 100%;
 }
