--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -2,24 +2,30 @@
   border-radius: 20px 20px 0px 0px;
   .paint(@white);
 }
+
 .page-footer__logo {
   margin: 37,4px auto 0px;
 }
+
 .page-footer__social {
   margin: 40,34px auto 0px;
   padding: 0px;
 }
+
 .page-footer__list {
   display: flex;
 }
+
 .page-footer__item {}
+
 .page-footer__link {
   &--facebook {}
   &--vkontakte {}
   &--instagram {}
 }
+
 .page-footer__copyright {
-  color:@special_gray;
+  color:@special-gray;
   .font(16px; 16px);
   .font-face-normal;
   display: flex;
