--- a/source/less/route-item.less
+++ b/source/less/route-item.less
@@ -25,7 +25,7 @@
 }
 
 .route-item__description {
-  color: @special_gray;
+  color: @special-gray;
   .font(16px; 18px);
   .font-face-medium;
   opacity: 0.3;
