--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,5 @@
 @import "variable.less";
+@import "fonts.less";
 @import "page-header.less";
 @import "main-nav.less";
 @import "site-list.less";
@@ -18,7 +19,7 @@
 @import "business.less";
 @import "tariff.less";
 @import "authorization.less";
-@import "adress.less";
+@import "address.less";
 @import "page-footer.less";
 @import "footer-social.less";
 
@@ -41,3 +42,7 @@
 @import "fellow-traveler.less";
 @import "wants-to-visit.less";
 @import "transport.less";
+
+.page__body {
+  .paint(@basic-blue);
+}
