--- a/source/less/user-list.less
+++ b/source/less/user-list.less
@@ -1,4 +1,4 @@
-.user-list{
+.user-list {
   list-style: none;
   text-align: center;
   text-transform: uppercase;
@@ -6,14 +6,29 @@
   .font(17px; 30px);
   padding: 0px;
 }
-.user-list__item{
-  background-color: @basic_yellow;
+
+.user-list__item {
+  background-color: @basic-yellow;
   border-radius: 30px;
   padding-top: 12px;
   padding-bottom: 8px;
   padding-left: 0px;
 }
-.user-list__login{
-  color: @basic_back;
+
+.user-list__login {
+  color: @basic-back;
   text-decoration: none;
+}
+
+@media (min-width: @desktop-width) {
+  .user-list__login {
+    width: 131px;
+    padding: 0px 28px;
+    display: block;
+  }
+
+  .user-list__item {
+    padding: 10px 0px;
+    height: 20px;
+  }
 }
