--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -1,23 +1,27 @@
-@basic_blue: #161C35;
-@blue_light: #EDEFF6;
-@basic_blue_light: #1D2E5B;
-@basic_yellow: #FFD74B;
-@special_yellow_dark: #FFBD30;
-@special_blue_light: #DFE3F0;
-@special_gray: #444444;
-@basic_blue_light: #1D2E5B;
-@special_red: #F47E7E;
-@special_orange: #FF8D30;
-@basic_back: #192144;
+@basic-blue: #161C35;
+@blue-light: #EDEFF6;
+@basic-blue-light: #1D2E5B;
+@basic-yellow: #FFD74B;
+@special-yellow-dark: #FFBD30;
+@special-blue-light: #DFE3F0;
+@special-gray: #444444;
+@basic-blue-light: #1D2E5B;
+@special-red: #F47E7E;
+@special-orange: #FF8D30;
+@basic-back: #192144;
 @white: #FFFFFF;
-@orange_light: #FFA530;
-@back_gray: #E6E8F1;
+@orange-light: #FFA530;
+@back-gray: #E6E8F1;
 @black: #000000;
-@gray_blue: #F3F4F8;
-@pure_blue: #132576;
-@gray_blue_light: #CBCED9;
-@light_back: #D4D9EB;
-@yellow: #F3C72B; 
+@gray-blue: #F3F4F8;
+@pure-blue: #132576;
+@gray-blue-light: #CBCED9;
+@light-back: #D4D9EB;
+@yellow: #F3C72B;
+
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width-only: 767px;
 
 .font-face-light {
   font-family: "Blogger sans";
