--- a/source/less/wants-to-visit.less
+++ b/source/less/wants-to-visit.less
@@ -2,17 +2,18 @@
   list-style: none;
   padding: 0px;
 }
+
 .wants-to-visit__item {
-  color: @basic_blue_light;
+  color: @basic-blue-light;
   text-transform: uppercase;
   .font(15px; 16px);
   .font-face-medium;
   display: flex;
   margin: 0px;
 }
-.wants-to-visit__flag {
 
-}
+.wants-to-visit__flag {}
+
 .wants-to-visit__country {
   margin: 5px;
 }
