--- a/source/less/about.less
+++ b/source/less/about.less
@@ -1,10 +1,7 @@
 .about {
   background-image: url(.../img/about-mobile@1x.png);
-  padding-left: 50px;
+  padding-left: 9%;
   margin: 0px auto 0px;
-  width: 100%;
-  outline: 5px solid rgba(0, 255, 0, 0.8);
-  outline-offset: -5px;
 }
 
 .about__title {
@@ -31,6 +28,41 @@
   border-radius: 20px;
   text-decoration: none;
   color: @basic-blue-light;
+  .font-face-bold;
+  .font(24px; 24px);
+}
+
+@media (min-width: @tablet-width) {
+  .about {
+    height: 660px;
+    border-radius: 0px 0px 20px 20px;
+  }
+
+  .about__title {
+    .font(45px; 45px);
+    padding-top: 42px;
+  }
+
+  .about__article {
+    .font(28px; 34px);
+    width: 309px;
+    padding-top: 47px;
+  }
+
+  .about__comment {
+    .font(21px; 24px);
+    width: 265px;
+    padding-top: 28px;
+    display: block;
+  }
+
+  .about__link {
+    display: block;
+    .size(244px; 51px);
+    padding-left: 32px;
+    padding-top: 29px;
+    margin-top: 52px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -62,5 +94,6 @@
     .size(242px; 51px);
     padding-left: 32px;
     padding-top: 29px;
+    margin-top: 85px;
   }
 }
