--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,4 +1,4 @@
-.font-face(300) {
+font-face (300) {
   font-family: "Blogger sans light";
   src: url("../fonts/bloggersans-light.woff2") format("woff2"),url("../fonts/bloggersans-light.woff") format("woff");
   font-weight: 300;
@@ -6,7 +6,7 @@
   font-display: swap;
 }
 
-.font-face(bold) {
+font-face (bold) {
   font-family: "Blogger sans bold";
   src: url("../fonts/bloggersans-bold.woff2") format("woff2"),url("../fonts/bloggersans-bold.woff") format("woff");
   font-weight: bold;
@@ -14,7 +14,7 @@
   font-display: swap;
 }
 
-.font-face(normal) {
+font-face (normal) {
   font-family: "Blogger sans";
   src: url("../fonts/bloggersans.woff2") format("woff2"),
      url("../fonts/bloggersans.woff") format("woff");
@@ -23,7 +23,7 @@
   font-display: swap;
 }
 
-.font-face(500) {
+font-face (500) {
   font-family: "Blogger sans medium";
   src: url("../fonts/bloggersans-medium.woff2") format("woff2"),
      url("../fonts/bloggersans-medium.woff") format("woff");
@@ -33,35 +33,17 @@
 }
 
 .font-face-light {
-  font-family: "Blogger sans";
-  src: url("../fonts/bloggersans-light.woff2") format("woff2"),url("../fonts/bloggersans-light.woff") format("woff");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
+  font-family: "Blogger sans light";
 }
 
 .font-face-bold {
-  font-family: "Blogger sans";
-  src: url("../fonts/bloggersans-bold.woff2") format("woff2"),url("../fonts/bloggersans-bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+  font-family: "Blogger sans bold";
 }
 
 .font-face-normal {
   font-family: "Blogger sans";
-  src: url("../fonts/bloggersans.woff2") format("woff2"),
-     url("../fonts/bloggersans.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
 }
 
 .font-face-medium {
-  font-family: "Blogger sans";
-  src: url("../fonts/bloggersans-medium.woff2") format("woff2"),
-     url("../fonts/bloggersans-medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
+  font-family: "Blogger sans medium";
 }
