--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -41,6 +41,30 @@
   }
 
   .page-header__social {
+  }
+
+  .page-header__contacts {
+    
+  }
+
+  .page-header__logo {
+    background-image: url(.../img/logo-desktop-white@1x.png);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    .paint(@basic-blue);
+    display: inline-flex;
+    display: block;
+    width: 91%;
+    padding-top: 0px;
+    margin: 0px auto 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .page-header__social {
     display: none;
     position: absolute;
   }
